<resources>
    <string name="searchForItemsYouWant">搜索你想要的商品</string>
    <string name="str_limitedTimeSecondsKill">限时秒杀</string>
    <string name="str_more">更多</string>
    <string name="str_integral">福币</string>
    <string name="str_pointsFor">福币兑换</string>
    <string name="str_earnPoints">赚取福币</string>
    <string name="str_text">-------</string>
    <string name="str_collection">收藏</string>
    <string name="str_immediatelyChange">立即购买</string>
    <string name="str_goods">商品</string>
    <string name="str_eval">评价</string>
    <string name="str_details">详情</string>
    <string name="str_shop">商城</string>
    <string name="str_earnPointsMoreGifts">赚取福币换更多好礼</string>
    <string name="str_immediatelyTo">立即前往</string>
    <string name="str_ongoing">进行中</string>
    <string name="str_limitedXa">限量%1$s件</string>
    <string name="str_zeroPercent">0%</string>
    <string name="str_goods_typeX">选择    <font color="#333333">已选：黑色 降噪 256G</font></string>
    <string name="str_goods_freightX">运费\t\t\t<font color="#333333">包邮</font></string>
    <string name="str_goods_parameterX">参数    <font color="#333333">苹果</font></string>
    <string name="str_parameter">参数</string>
    <string name="str_lookAtAll">查看全部</string>
    <string name="str_productEvaluation">商品评价(0)</string>
    <string name="str_productEvaluationX">商品评价(%1$s)</string>
    <string name="str_goodsDetails">商品详情</string>
    <string name="str_vipExclusive">会员专享</string>
    <string name="str_vip_discount">会员折扣</string>
    <string name="str_fromEnd">距结束</string>
    <string name="str_fromStart">距开始</string>
    <string name="str_zero2">00</string>
    <string name="str_zero">0</string>
    <string name="str_colon">:</string>
    <string name="str_haveToRemind">已提醒</string>
    <string name="str_submitOrder">提交订单</string>
    <string name="str_yourAccount">您的账户：</string>
    <string name="str_ose">-</string>
    <string name="str_one">1</string>
    <string name="str_add">+</string>
    <string name="str_distribution">配送方式</string>
    <string name="str_leaveMessage">留言</string>
    <string name="str_orderLeaveMessage">订单留言</string>
    <string name="str_optionalMore100Words">选填，100字以内</string>
    <string name="str_amountGoods">商品金额</string>
    <string name="str_memberDiscount">会员折扣</string>
    <string name="str_bargaining_discounts">砍价优惠</string>
    <string name="str_freight">运费</string>
    <string name="str_combinedXintegral">合计：<font color="#1700f4">1300福币 </font></string>
    <string name="str_payType">支付方式</string>
    <string name="str_integralPay">福币支付</string>
    <string name="str_packageMail">快递包邮</string>
    <string name="str_payConfirm">确认支付</string>
    <string name="str_remainingTimePayment">支付剩余时间：</string>
    <string name="str_yourAccountPoints">您的账户：</string>
    <string name="str_yourAccountPoints_font">您的账户：<font color="#1700f4">1300福币</font></string>
    <string name="str_paySucces">支付成功</string>
    <string name="str_total">共计</string>
    <string name="str_payFailure">支付失败</string>
    <string name="str_orderDetails">订单详情</string>
    <string name="str_commodityGrade">商品评分：</string>
    <string name="str_serialNumber">编号 :</string>
    <string name="str_color">颜色</string>
    <string name="str_specifications">规格</string>
    <string name="str_number">数量</string>
    <string name="str_xgXjkcXj">（<font color="#1700f4">限购5件</font> 库存1024件）</string>
    <string name="str_yourAccountPointsF">您的账户：<font color="#1700f4">1800</font>分</string>
    <string name="str_limited">限量</string>
    <string name="str_a">件</string>
    <string name="str_toSnapUp">去抢购</string>
    <string name="str_hasGone">已抢光</string>
    <string name="str_hasEnded">已结束</string>
    <string name="str_remindMe">提醒我</string>
    <string name="str_cancelReminder">取消提醒</string>
    <string name="prompt_setNotic">请在手机系统”设置-通知“中允许本App发送通知消息</string>
    <string name="str_cancel">取消</string>
    <string name="str_toSetUp">去设置</string>
    <string name="str_myPoints">我的福币</string>
    <string name="str_integralDetail">福币明细</string>
    <string name="str_orderConfirm">确认订单</string>
    <string name="str_goodsEvaluation">商品评价</string>
    <string name="str_orderEvaluation">订单评价</string>
    <string name="str_postEvaluation">发布评价</string>
    <string name="str_orderScore">订单评分</string>
    <string name="str_anonymousSubmissions">匿名提交</string>
    <string name="str_xeb">/500</string>
    <string name="str_pleaseEnterComments">请输入评论内容</string>
    <string name="str_badReview">差评</string>
    <string name="str_mediumReview">中评</string>
    <string name="str_goodReview">好评</string>
    <string name="str_ordersGoods">商城订单</string>
    <string name="str_all">全部</string>
    <string name="str_toBePaid">待支付</string>
    <string name="str_toSendGoods">待发货</string>
    <string name="str_forGoods">待收货</string>
    <string name="str_toEvaluate">待评价</string>
    <string name="str_refundOrAfterSale">退款/售后</string>
    <string name="str_orderNo">订单编号：</string>
    <string name="font_aCombined">合计:<font color="#1700f4">1300福币</font></string>
    <string name="str_confirm">确认</string>
    <string name="str_determine">确定</string>
    <string name="prompt_cancelOrder">取消订单后，订单将不可恢复</string>
    <string name="str_confirmReceiptGoods">是否确认收货</string>
    <string name="prompt_orderUpdateAddress">（温馨提示：只能修改1次收货地址，请谨慎操作）</string>
    <string name="prompt_waitSend">（温馨提示：付款后不能申请退款，有问题请联系客服）</string>
    <string name="str_remainingTimePayment0">支付剩余时间 </string>
    <string name="str_copeWithTotalAmount">应付总额：</string>
    <string name="str_realPayTotalAmount">实付总额：</string>
    <string name="str_cancelOrder">取消订单</string>
    <string name="str_immediatePayment">立即支付</string>
    <string name="str_logisticsInformation">物流单号</string>
    <string name="str_copy">复制</string>
    <string name="str_orderParticulars">订单明细</string>
    <string name="str_common">共</string>
    <string name="str_jsp">件商品</string>
    <string name="str_rmb">¥</string>
    <string name="str_div_rmb">-¥</string>
    <string name="str_orderNo0">订单编号</string>
    <string name="str_orderTime">下单时间</string>
    <string name="str_allOrders">所有订单</string>
    <string name="str_screening">筛选</string>
    <string name="str_orderType">订单类型</string>
    <string name="str_orderCar">购车订单</string>
    <string name="str_orderTestDrive">预约试驾订单</string>
    <string name="str_hasChange">已兑换</string>
    <string name="str_vipDiscount">会员折扣</string>
    <string name="str_notStart">未开始</string>
    <string name="prompt_set_setNotic">已设置提醒，将提前5分钟提醒您。</string>
    <string name="prompt_cancel_setNotic">秒杀提醒已取消，您可能会错失秒杀良机哦～</string>
    <string name="str_hasBeenRobbed">已抢</string>
    <string name="str_percent">%</string>
    <string name="str_parameterIllegal">参数非法!</string>
    <string name="str_pleaseAddShippingAddress">请添加收货地址</string>
    <string name="str_hasBeenSoldOut">已售罄</string>
    <string name="str_stock_tips">到货提醒</string>
    <string name="str_has_tips">已订阅</string>
    <string name="str_lackBalance">余额不足</string>
    <string name="str_fbInsufficient">福币不足</string>
    <string name="str_combined">合计：</string>
    <string name="str_Xfb">%1$s福币</string>
    <string name="str_select">选择</string>
    <string name="str_confirmGoods">确认收货</string>
    <string name="str_onceAgainToBuy">再次购买</string>
    <string name="str_orderCancelledSuccessfully">订单取消成功</string>
    <string name="str_goodsSuccessfully">收货成功</string>
    <string name="str_x">x</string>
    <string name="prompt_paymentHasBeen">已付款，等待商家发货</string>
    <string name="prompt_hasBeenShipped">商家已发货，待确认收货</string>
    <string name="prompt_evaluate">已确认收货，待评价</string>
    <string name="prompt_hasBeenCompleted">已评价，订单完成</string>
    <string name="str_other">其它</string>
    <string name="str_payTime">支付时间</string>
    <string name="str_deliveryTime">发货时间</string>
    <string name="str_collectionSuccess">收藏成功</string>
    <string name="str_cancelledCollection">取消收藏</string>
    <string name="str_seckill">秒杀</string>
    <string name="str_bargaining">砍价</string>
    <string name="str_maintenance">维保</string>
    <string name="str_addressChangedSuccessfully">地址修改成功</string>
    <string name="str_unselectedAttribute">未选择属性</string>
    <string name="str_000000">00:00:00</string>
    <string name="str_reduction">-</string>
    <string name="str_noDatanow">暂时没有数据哦~</string>
    <string name="str_loading">加载中...</string>
    <string name="str_evaluationSuccess">评价成功</string>
    <string name="str_haveAgreedAndAccepted">我已阅读并接受</string>
    <string name="str_fuyuAPPStoreTermsService">《福域APP商城服务条款》</string>
    <string name="str_anonymousUsers">匿名用户</string>
    <string name="str_noOrder">您还没有相关订单哦~</string>
    <string name="str_noComment">没有评论</string>
    <string name="str_currentPageIsInvalid">当前页面已失效~</string>
    <string name="str_applyRefund">申请售后</string>
    <string name="str_refundComplete">售后已处理</string>
    <string name="prompt_refundComplete">您的售后申请已处理，如有疑问请联系客服</string>
    <string name="str_applyRefundComplete">您的退换货申请已提交</string>
    <string name="str_iKnow">我知道了</string>
    <string name="str_areYouApplyReturn">是否确定申请退换货</string>
    <string name="str_contactCustomerService">联系客服</string>
    <string name="str_coin">币</string>
    <string name="str_propertiesAreNotFullySelected">属性未选择完全</string>
    <string name="str_purchaseQuantityHasExceededLimit">已超出限购数量</string>
    <string name="str_insufficientInventory">库存不足</string>
    <string name="str_orderClosed">订单已关闭</string>
    <string name="str_bargainingFavorable">砍价优惠</string>
    <string name="str_models">车型</string>
    <string name="str_vinCode">VIN码</string>
    <string name="str_dealName">推荐经销商</string>
    <string name="str_shareFailure">分享失败</string>
    <string name="str_comprehensiveRanking">综合排序</string>
    <string name="str_sales">销量</string>
    <string name="str_price">价格</string>
    <string name="str_filter_shop">筛选</string>
    <string name="str_clickingTooFast">点击频率过快!</string>
    <string name="str_hasChangeXa">已兑换%1$s件</string>
    <string name="str_walk">逛一逛</string>
    <string name="str_customerService">客服</string>
    <string name="str_ruleDescription">规则说明</string>
    <string name="str_shoppingCart">购物车</string>
    <string name="str_addShoppingCart">加入购物车</string>
    <string name="str_left_parentheses">（</string>
    <string name="str_right_parentheses">）</string>
    <string name="str_coupons">优惠券</string>
    <string name="str_subtractRmb">-￥</string>
    <string name="str_payWay">支付方式</string>
    <string name="str_currencyAvailableFb">(本次可用福币</string>
    <string name="str_pleaseEnterUseLuckyCurrency">请输入使用福币</string>
    <string name="str_customLuckyCoinPayment">自定义福币支付</string>
    <string name="str_hasMaxUseFb">已超出最大可使用福币</string>
    <string name="str_wxPay">微信支付</string>
    <string name="str_zfbPay">支付宝支付</string>
    <string name="str_unionPayCloudFlashPayment">银联云闪付</string>
    <string name="str_temporarilyNoUse">暂无可用</string>
    <string name="str_pleaseSelectCoupons">请选择优惠券</string>
    <string name="str_chooseCoupons">选择优惠券</string>
    <string name="str_noThreshold">无门槛</string>
    <string name="str_fold">折</string>
    <string name="str_currentlySelect1Card">当前可选1张</string>
    <string name="str_noCouponsAvailableMoment">暂无可用优惠券</string>
    <string name="str_lookLogistics">查看物流</string>
    <string name="str_applyInvoice">申请发票</string>
    <string name="str_lookInvoice">查看发票</string>
    <string name="str_applyARefund">申请退款</string>
    <string name="str_goodsList">商品列表</string>
    <string name="str_goodsNameSearch">商品名称搜索</string>
    <string name="str_score">评分</string>
    <string name="str_cover">封面</string>
    <string name="str_releasedAfterReview">发布追评</string>
    <string name="str_refund">退款</string>
    <string name="str_currentXOptions">当前有%1$i张可选</string>
    <string name="str_afterDetails">售后详情</string>
    <string name="str_since">起</string>
    <string name="str_carMaintenance">爱车养护</string>
</resources>