<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/layout_bottom"
        android:paddingStart="@dimen/dp_20"
        android:paddingEnd="@dimen/dp_20"
        android:paddingTop="@dimen/dp_7"
        android:paddingBottom="@dimen/dp_20"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.changanford.shop.view.TypefaceTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_copeWithTotalAmount"
            android:textColor="@color/color_33"
            android:textSize="@dimen/sp_12" />
        <com.changanford.shop.view.TypefaceTextView
            android:id="@+id/tv_integral"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            app:end_txt="@string/str_integral"
            android:textColor="@color/color_00095B"
            android:textSize="@dimen/sp_14" />
        <com.changanford.shop.view.TypefaceTextView
            android:id="@+id/tv_order_cancle"
            android:background="@drawable/bord_00095b_1dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_40"
            android:minWidth="@dimen/dp_98"
            android:text="@string/str_cancelOrder"
            android:textColor="@color/color_00095B"
            android:textSize="@dimen/sp_15"
            android:textStyle="bold"/>
        <com.changanford.shop.view.TypefaceTextView
            android:textStyle="bold"
            android:layout_marginStart="@dimen/dp_10"
            android:id="@+id/tv_order_confirm"
            android:background="@drawable/shadow_00095b_20dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_40"
            android:minWidth="@dimen/dp_98"
            android:text="@string/str_immediatePayment"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_15" />
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>