<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        app:layout_constraintBottom_toBottomOf="@id/img_goodsCover"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <com.changanford.shop.view.TypefaceTextView
            android:paddingStart="@dimen/dp_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_ose"
            android:textColor="@color/color_33"
            android:textSize="@dimen/sp_15"
            android:paddingEnd="@dimen/dp_7"/>
        <com.changanford.shop.view.TypefaceTextView
            android:background="@drawable/shadow_f9_3dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/dp_40"
            android:minHeight="@dimen/dp_20"
            android:text="@string/str_one"
            android:textColor="@color/color_33"
            android:textSize="@dimen/sp_12" />
        <com.changanford.shop.view.TypefaceTextView
            android:paddingStart="@dimen/dp_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_add"
            android:textColor="@color/color_33"
            android:textSize="@dimen/sp_15" />
    </LinearLayout>
</layout>